ingress/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  labels:
    name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: /kafka-producer(/|$)(.*)
            backend:
              service:
                name: kafka-producer-service
                port:
                  number: 8084
          - pathType: ImplementationSpecific
            path: /kafka-worker(/|$)(.*)
            backend:
              service:
                name: kafka-worker-api-service
                port:
                  number: 8085
